--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export -o build/",
     "start": "next start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
