--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "gh-pages -d build -t"
   },
   "dependencies": {
+    "@types/react": "^17.0.0",
     "@zeit/next-sass": "^1.0.1",
     "animate.css": "^4.1.1",
     "animated-number-react": "^0.1.1",
@@ -20,8 +21,10 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-reveal": "^1.2.2",
+    "react-slick": "^0.27.13",
     "reactstrap": "^8.7.1",
     "sass": "^1.29.0",
+    "slick-carousel": "^1.8.1",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
