--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-reveal": "^1.2.2",
+    "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
     "reactstrap": "^8.7.1",
     "sass": "^1.29.0",
