--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "next": "^10.0.1",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
+    "react-countup": "^4.3.3",
+    "react-cx": "^0.1.12",
     "react-dom": "^16.13.1",
+    "react-on-screen": "^2.1.1",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
