--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
   },
   "dependencies": {
     "@types/react": "^17.0.0",
-    "@zeit/next-sass": "^1.0.1",
     "animate.css": "^4.1.1",
     "animated-number-react": "^0.1.1",
     "bootstrap": "^4.5.3",
     "lottie-web": "^5.7.4",
     "next": "^10.0.1",
     "react": "^16.13.1",
-    "react-animate-on-scroll": "^2.1.5",
     "react-countup": "^4.3.3",
     "react-cx": "^0.1.12",
     "react-dom": "^16.13.1",
@@ -28,8 +26,7 @@
     "react-slick": "^0.27.13",
     "reactstrap": "^8.7.1",
     "sass": "^1.29.0",
-    "slick-carousel": "^1.8.1",
-    "topojson-client": "^3.1.0"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/d3-time-format": "^2.1.1",
