--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "animated-number-react": "^0.1.1",
     "bootstrap": "^4.5.3",
     "lottie-web": "^5.7.4",
-    "next": "^10.0.1",
+    "next": "^10.0.4-canary.3",
+    "rc-slider": "^9.6.5",
     "react": "^16.13.1",
     "react-countup": "^4.3.3",
     "react-cx": "^0.1.12",
@@ -24,6 +25,7 @@
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
+    "react-transition-group": "^4.4.1",
     "reactstrap": "^8.7.1",
     "sass": "^1.29.0",
     "slick-carousel": "^1.8.1"
