--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "deploy": "gh-pages -d build -t"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/react": "^17.0.0",
     "animate.css": "^4.1.1",
     "animated-number-react": "^0.1.1",
