--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build && next export -o build && touch build/.nojekyll",
     "start": "next start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -t"
+    "deploy": "gh-pages -d build -t",
+    "deploy-id": "gh-pages -d build -t -b region-id",
+    "deploy-vn": "gh-pages -d build -t -b region-vn"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
