--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "predeploy-id": "npm run build",
     "deploy-id": "gh-pages -d build -t -b id",
     "predeploy-vn": "npm run build",
-    "deploy-vn": "gh-pages -d build -t -b vn"
+    "deploy-vn": "gh-pages -d build -t -b vn",
+    "predeploy-th": "npm run build",
+    "deploy-th": "gh-pages -d build -t -b th"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
